beginning main page using BEM tech

--- a/index.html
+++ b/index.html
@@ -11,7 +11,35 @@
 </head>
 <body>
     <div class="container">
+        <header>
+            <div class="header">
+                <div class="header__logo">
+                    <a class="header__link" href="#">
+                        <img class="header__img" src="img/logo.png" width="151" height="30" alt="logo">
+                    </a>
+                </div>
+                <nav class="header__menu">
+                    <ul class="header__menu-list">
+                        <li class="header__menu-item">
+                            <a class="header__menu-link" href="#">Home</a>
+                        </li>
+                        <li class="header__menu-item">
+                            <a class="header__menu-link" href="#">Services</a>
+                        </li>
+                        <li class="header__menu-item">
+                            <a class="header__menu-link" href="#">About</a>
+                        </li>
+                        <li class="header__menu-item">
+                            <a class="header__menu-link" href="#">Work</a>
+                        </li>
+                        <li class="header__menu-item">
+                            <a class="header__menu-link" href="#">Contacts</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
 
+        </header>
     </div>
     <script src="vendor/jquery/jquery-3.2.0.min.js"></script>
     <script src="vendor/inputMask/jquery.inputmask.bundle.min.js"></script>
