--- a/index.html
+++ b/index.html
@@ -38,9 +38,49 @@
                     </ul>
                 </nav>
             </div>
-
         </header>
+        <div class="content">
+            <h1 class="content__title">Contact us</h1>
+            <p class="content__text">as suscipit porttitor porttitor. Morbi sit amet tincidunt sapien. Curabitur posuere lectus aliquet erat rutrum sollicitudin. In enim diam, ullamcorper quis libero et, ultricies commodo est. Quisque at ante vitae justo fermentum viverra ac eu justo. Ut luctus imperdiet lacus, eget laoreet erat posuere quis.</p>
+            <div class="content__address">
+                <h4 class="content__address-title">Address</h4>
+                <div class="content__address-details">
+                    <h5 class="content__address-logo">Acrostia</h5>
+                    <div class="content__address-district">
+                        <span class="content__address-street">Sevenoaks Rd<br>Sevenoaks TN14 7HR, UK</span>
+                    </div>
+                    <span class="content__address-phone"><i class="content__address-phoneW">Phone:</i>+44 555 555 555</span>
+                    <span class="content__address-fax"><i class="content__address-faxW">Fax:</i>+44 556  555 555</span>
+                    <span class="content__address-email"><i class="content__address-emailW">E-mail:</i>info@acrostia.com</span>
+                    <span class="content__address-skype"><i class="content__address-skypeW">Skype:</i>Ac0stia</span>
+                </div>
+                <div class="content__address-map address-map">
+                    <div class="address-map__block">
+                        <img class="address-map__img" src="upload/map.jpg" width="260" height="220" alt="">
+                    </div>
+                </div>
+            </div>
+            <form class="content__contact">
+                <h4 class="content__contact-title">Ask a question</h4>
+                <span class="content__contact-formName"><input class="content__contact-inputName" type="text" placeholder="Name"></span>
+                <span class="content__contact-formMail"><input class="content__contact-inputMail" type="email" placeholder="E-mail"></span>
+                <textarea class="content__contact-formArea" placeholder="Your question" name="" id="" cols="30" rows="10"></textarea>
+                <div class="content__contact-formButton">
+                    <button class="content__contact-formBtn">Send</button>
+                </div>
+            </form>
+        </div>
     </div>
+    <footer>
+        <div class="container">
+            <div class="social-icons">
+                <a class="social-icons__facebook" href="#"></a>
+                <a class="social-icons__twitter" href="#"></a>
+                <a class="social-icons__googlePlus" href="#"></a>
+                <a class="social-icons__linkedIn" href="#"></a>
+            </div>
+        </div>
+    </footer>
     <script src="vendor/jquery/jquery-3.2.0.min.js"></script>
     <script src="vendor/inputMask/jquery.inputmask.bundle.min.js"></script>
     <script src="js/core.js"></script>
