finished 1 stage of work

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Homework 39</title>
     <link rel="stylesheet" href="css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="vendor/fontAwesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
@@ -74,10 +75,10 @@
     <footer>
         <div class="container">
             <div class="social-icons">
-                <a class="social-icons__facebook" href="#"></a>
-                <a class="social-icons__twitter" href="#"></a>
-                <a class="social-icons__googlePlus" href="#"></a>
-                <a class="social-icons__linkedIn" href="#"></a>
+                <a class="social-icons__facebook" href="#"><i class="fa fa-facebook social-icons__fa" aria-hidden="true"></i></a>
+                <a class="social-icons__twitter" href="#"><i class="fa fa-twitter social-icons__fa" aria-hidden="true"></i></a>
+                <a class="social-icons__googlePlus" href="#"><i class="fa fa-google-plus social-icons__fa" aria-hidden="true"></i></a>
+                <a class="social-icons__linkedIn" href="#"><i class="fa fa-linkedin social-icons__fa" aria-hidden="true"></i></a>
             </div>
         </div>
     </footer>
