worked on adaptivity

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                         <img class="header__img" src="img/logo.png" width="151" height="30" alt="logo">
                     </a>
                 </div>
+                <div class="header__menu-btn menu-btn not-active" id="menu-btn"><span class="menu-btn__span"></span></div>
                 <nav class="header__menu">
                     <ul class="header__menu-list">
                         <li class="header__menu-item">
@@ -87,3 +88,4 @@
     <script src="js/core.js"></script>
 </body>
 </html>
+
