--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     <span class="content__address-skype"><i class="content__address-skypeW">Skype:</i>Ac0stia</span>
                 </div>
                 <div class="content__address-map address-map">
-                    <div class="address-map__block">
-                        <img class="address-map__img" src="upload/map.jpg" width="260" height="220" alt="">
+                    <div id="map" class="address-map__block">
+                        <a href="#"><img class="address-map__img" src="upload/map.jpg" width="260" height="220" alt=""></a>
                     </div>
                 </div>
             </div>
